fix cropper

--- a/src/components/animal/inputDes.css
+++ b/src/components/animal/inputDes.css
@@ -8,3 +8,27 @@
 .div-visible{
     display: block;
 }
+
+#container {
+    width: 80%;
+  /*border-radius: 25px;*/
+  border: 5px solid Black;
+  padding: 15px 15px 15px 15px;
+  margin: 20px 20px 20px 20px;
+  background: #A4D3EE;
+  overflow: visible;
+  box-shadow: 5px 5px 2px #888888;
+  position: relative;
+}
+
+.x {
+    position: absolute;
+    background: white; 
+    color: black;
+    top: 0px;
+    right: 0px;
+}
+
+.btn-crop{
+    margin-right: 5px;
+}
